--- a/.github/workflows/azure2.yml
+++ b/.github/workflows/azure2.yml
@@ -17,7 +17,7 @@ jobs:
       
       - uses: azure/docker-login@v1
         with:
-          login-server: yourACRname.azurecr.io
+          login-server: team7acr.azurecr.io
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
           
