--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -20,15 +20,15 @@ jobs:
     
     # Connect to Azure Container Registry (ACR)
     - name: Connecting to Azure Container Registry
-      uses: azure/docker-login@v1
+    - uses: azure/docker-login@v1
       with:
         login-server: ${{ env.REGISTRY_NAME }}.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }} 
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - name: Checkout code
-      uses: actions/checkout@master
+    - uses: actions/checkout@master
     - name: Fetch all history for all tags and branches
-      run: git fetch --prune --unshallow
+    - run: git fetch --prune --unshallow
     #- name: Cloning Dockerfile repo
     #  run: git clone https://github.com/juanbaas/onlineshop-docker.git
     #- name: Showing entrypoint
@@ -36,8 +36,8 @@ jobs:
 
     # Container build and push to a Azure Container Registry (ACR)
     - name: Container build and push to a Azure Container Registry (ACR)
-      run: |
-        cd app
+    - run: |
+        #cd app
         #docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         #docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         docker compose up -d
@@ -47,7 +47,7 @@ jobs:
     
     # Set the target Azure Kubernetes Service (AKS) cluster. 
     - name: Set the target Azure Kubernetes Service (AKS) cluster
-      uses: azure/aks-set-context@v1
+    - uses: azure/aks-set-context@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: ${{ env.CLUSTER_NAME }}
@@ -55,7 +55,7 @@ jobs:
     
     # Create image pull secret for ACR
     - name: Create image pull secret for ACR
-      uses: azure/k8s-create-secret@v1
+    - uses: azure/k8s-create-secret@v1
       with:
         container-registry-url: ${{ env.REGISTRY_NAME }}.azurecr.io
         container-registry-username: ${{ secrets.REGISTRY_USERNAME }}
